--- a/CineQuebec.Windows/CineQuebec.Windows.csproj
+++ b/CineQuebec.Windows/CineQuebec.Windows.csproj
@@ -20,7 +20,9 @@
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="MaterialDesignColors" Version="3.0.0" />
     <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
   </ItemGroup>
 
 	<ItemGroup>
