--- a/CineQuebec.Windows/CineQuebec.Windows.csproj
+++ b/CineQuebec.Windows/CineQuebec.Windows.csproj
@@ -43,6 +43,30 @@
 		<Resource Include="Ressources\images\no_img.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Resource>
+		<None Remove="Ressources\images\no.png" />
+		<Resource Include="Ressources\images\no.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<None Remove="Ressources\images\0.png" />
+		<Resource Include="Ressources\images\0.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<None Remove="Ressources\images\1.png" />
+		<Resource Include="Ressources\images\1.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<None Remove="Ressources\images\2.jpg" />
+		<Resource Include="Ressources\images\2.jpg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<None Remove="Ressources\images\3.png" />
+		<Resource Include="Ressources\images\3.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<None Remove="Ressources\images\2.png" />
+		<Resource Include="Ressources\images\2.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
 	</ItemGroup>
 
   <ItemGroup>
