--- a/CineQuebec.Windows/CineQuebec.Windows.csproj
+++ b/CineQuebec.Windows/CineQuebec.Windows.csproj
@@ -67,6 +67,10 @@
 		<Resource Include="Ressources\images\2.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Resource>
+		<None Remove="Ressources\images\CineQuebec.jpg" />
+		<Resource Include="Ressources\images\CineQuebec.jpg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
 	</ItemGroup>
 
   <ItemGroup>
