Correction de connexion pour savoir type utilisateur

--- a/CineQuebec.Windows/CineQuebec.Windows.csproj
+++ b/CineQuebec.Windows/CineQuebec.Windows.csproj
@@ -56,4 +56,9 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\Abonne\" />
+    <Folder Include="View\Abonne\" />
+  </ItemGroup>
+
 </Project>
